# realtime-dq-monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  lint.yml  test.yml
docs/: architecture.md  assignment_completion_matrix.md  feature_spec.md  incident_playbook.md  postmortem_sample.md  postmortem_template.md  project_status.md  runbook.md  schema_dictionary.md
docs/adr/: 001-idempotency.md  002-baseline.md
examples/: demo_events.jsonl
scripts/: prepare_nyc_taxi_events.py
src/realtime_monitor/: __init__.py  cli.py  config.py  dashboard.py
src/realtime_monitor/adapters/: __init__.py  canonical.py  github.py  registry.py
src/realtime_monitor/ingest/: checkpoints.py  source.py
src/realtime_monitor/metrics/: aggregates.py  baselines.py  digest.py
src/realtime_monitor/quality/: alerting.py  detectors.py  incident_store.py  rules.py  sql_queries.py
src/realtime_monitor/utils/: heavy_hitters.py  logging.py  rate_limit.py
tests/: test_adapters.py  test_cli_reports.py  test_detectors.py  test_digest.py  test_rules.py  test_sql_queries.py  test_stream_sim.py
