[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-dq-monitor"
version = "0.1.0"
description = "Realtime DQ monitor with incident detection and analytics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polars>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "build>=1.2.0",
]
ui = [
  "streamlit>=1.30.0",
  "pandas>=2.0.0",
]

[project.scripts]
realtime-monitor = "realtime_monitor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
